objects/Student__c.object
<CustomObject>
    <description>Student</description>
    <fields>
        <fullName>Birthday__c</fullName>
        <description>Birthday</description>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kazakhstan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea, Democratic Republic of (North Korea)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea, Republic of (South Korea)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kyrgyz Republic (Kyrgyzstan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maldives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mongolia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Myanmar/Burma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nepal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Papua New Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solomon Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sri Lanka</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email</description>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <externalId>true</externalId>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name</description>
        <externalId>true</externalId>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Fresher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leader</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Google_Map__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Street__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;)+&quot;,&quot;+
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(City__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;)+&quot;,&quot;+
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(State_Province__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Google Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_Location__c</fullName>
        <label>Map Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <formula>IF(OR(
         ISBLANK(Map_Location__Latitude__s),
         ISBLANK(Map_Location__Longitude__s)
      ) , &apos;Map preview is not available now&apos;,
IMAGE(&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot; + Location_Google_Map__c + &quot;&amp;zoom=13&amp;size=600x300&amp;&quot;+ Location_Google_Map__c  + &quot;&amp;key=AIzaSyAk4lh1e88wZ542EMBnQWYmAbdan2vtfQM&quot;,&apos;No Map Preview Available&apos;,
  300, 600
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Scores__c</fullName>
        <description>Scores</description>
        <label>Scores</label>
        <summarizedField>Student_Scoring_Skills__c.Points__c</summarizedField>
        <summaryFilterItems>
            <field>Student_Scoring_Skills__c.Points__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Scoring_Skills__c.Student_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <description>Skills</description>
        <globalPicklist>Skills</globalPicklist>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State/Province</description>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street</description>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Zip/Postal Code</description>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Student Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Birthday</fullName>
        <active>true</active>
        <description>validate field birthday</description>
        <errorConditionFormula>YEAR( TODAY() ) - YEAR( Birthday__c)  &lt; 16</errorConditionFormula>
        <errorMessage>Field Birthday less than 16 years old</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailRule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT(ISBLANK(Email__c)),
 NOT(REGEX( Email__c ,&quot;\\w([^@\\s,;]+)@((mulodo|gmail)\\.com)&quot;))
)</errorConditionFormula>
        <errorMessage>Invalid email format(xxx@mulodo.com or xxx@gmail.com)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PhoneRule</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(SUBSTITUTE(Phone__c, &apos; &apos;, &apos;&apos;)) &lt; 10 || LEN(SUBSTITUTE(Phone__c, &apos; &apos;, &apos;&apos;)) &gt; 11  ||  NOT(ISNUMBER(SUBSTITUTE(Phone__c, &apos; &apos;, &apos;&apos;)) )</errorConditionFormula>
        <errorMessage>Incorrect phone number format(10 - 11 numbers)</errorMessage>
    </validationRules>
</CustomObject>